--- a/Teistris/nbproject/private/private.properties
+++ b/Teistris/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Aitor\\AppData\\Roaming\\NetBeans\\23\\build.properties
+user.properties.file=C:\\Users\\Roi\\AppData\\Roaming\\NetBeans\\23\\build.properties
