--- a/Aforcado/nbproject/private/private.properties
+++ b/Aforcado/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/roi.castrocalvar/.netbeans/25/build.properties
+user.properties.file=/home/aitor.martinezparente/.netbeans/25/build.properties
