--- a/Teistris/nbproject/private/private.properties
+++ b/Teistris/nbproject/private/private.properties
@@ -1,2 +1,8 @@
 compile.on.save=true
-user.properties.file=/home/aitor.martinezparente/.netbeans/25/build.properties
+do.depend=false
+do.jar=true
+do.jlink=false
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
+user.properties.file=C:\\Users\\Aitor\\AppData\\Roaming\\NetBeans\\25\\build.properties
