--- a/Aforcado/nbproject/project.properties
+++ b/Aforcado/nbproject/project.properties
@@ -35,9 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Aforcado
 endorsed.classpath=
 excludes=
+file.reference.sqlite-jdbc-3.49.1.0.jar=C:\\Users\\Roi\\Downloads\\sqlite-jdbc-3.49.1.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.sqlite-jdbc-3.49.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
