--- a/Aforcado/nbproject/private/private.properties
+++ b/Aforcado/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Roi\\AppData\\Roaming\\NetBeans\\23\\build.properties
+user.properties.file=/home/roi.castrocalvar/.netbeans/25/build.properties
