--- a/Aforcado/nbproject/project.properties
+++ b/Aforcado/nbproject/project.properties
@@ -36,10 +36,12 @@ dist.jlink.output=${dist.jlink.dir}/Aforcado
 endorsed.classpath=
 excludes=
 file.reference.sqlite-jdbc-3.49.1.0.jar=C:\\Users\\Roi\\Downloads\\sqlite-jdbc-3.49.1.0.jar
+file.reference.sqlite-jdbc-3.49.1.0.jar-1=/home/roi.castrocalvar/Descargas/Programacion/sqlite-jdbc-3.49.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.49.1.0.jar}
+    ${file.reference.sqlite-jdbc-3.49.1.0.jar}:\
+    ${file.reference.sqlite-jdbc-3.49.1.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
